graphql_rs_native/src/language/snapshots/tests__language::parser::tests::test_float_value.snap
---
created: "2019-10-30T03:14:34.874355Z"
creator: insta@0.8.2
source: graphql_rs_native/src/language/parser.rs
expression: "float_value::<(&str,\n               ErrorKind)>(&source)(&source.body).unwrap_or_else(|_|\n                                                                     panic!(\"Test failed\"))"
---
[
  "",
  {
    "kind": "FloatValue",
    "loc": {
      "start": 0,
      "end": 3
    },
    "value": "1.1"
  }
]
