graphql_rs_native/src/language/snapshots/tests__language::parser::tests::test_object_definition_1.snap
---
created: "2019-08-11T13:12:11.347512Z"
creator: insta@0.8.2
source: graphql_rs_native/src/language/parser.rs
expression: "object_definition::<(&str,\n                     ErrorKind)>(&source)(&source.body).unwrap_or_else(|_|\n                                                                           panic!(\"Test failed\"))"
---
[
  "",
  {
    "kind": "ObjectTypeDefinition",
    "loc": {
      "start": 0,
      "end": 20,
      "source": {
        "name": "GraphQL Request",
        "locationOffset": {
          "line": 1,
          "column": 1
        }
      }
    },
    "description": null,
    "name": {
      "kind": "Name",
      "loc": {
        "start": 5,
        "end": 9,
        "source": {
          "name": "GraphQL Request",
          "locationOffset": {
            "line": 1,
            "column": 1
          }
        }
      },
      "value": "User"
    },
    "interfaces": null,
    "directives": null,
    "fields": [
      {
        "kind": "FieldDefinition",
        "loc": {
          "start": 12,
          "end": 18,
          "source": {
            "name": "GraphQL Request",
            "locationOffset": {
              "line": 1,
              "column": 1
            }
          }
        },
        "description": null,
        "name": {
          "kind": "Name",
          "loc": {
            "start": 12,
            "end": 14,
            "source": {
              "name": "GraphQL Request",
              "locationOffset": {
                "line": 1,
                "column": 1
              }
            }
          },
          "value": "id"
        },
        "arguments": null,
        "type": {
          "kind": "NamedType",
          "kind": "NamedType",
          "loc": {
            "start": 16,
            "end": 18,
            "source": {
              "name": "GraphQL Request",
              "locationOffset": {
                "line": 1,
                "column": 1
              }
            }
          },
          "name": {
            "kind": "Name",
            "loc": {
              "start": 16,
              "end": 18,
              "source": {
                "name": "GraphQL Request",
                "locationOffset": {
                  "line": 1,
                  "column": 1
                }
              }
            },
            "value": "ID"
          }
        },
        "directives": null
      }
    ]
  }
]
