graphql_rs_native/src/language/snapshots/tests__language::parser::tests::test_object_definition_2.snap
---
created: "2019-10-30T03:14:35.009948Z"
creator: insta@0.8.2
source: graphql_rs_native/src/language/parser.rs
expression: "object_definition::<(&str,\n                     ErrorKind)>(&source)(&source.body).unwrap_or_else(|_|\n                                                                           panic!(\"Test failed\"))"
---
[
  "",
  {
    "kind": "ObjectTypeDefinition",
    "loc": {
      "start": 0,
      "end": 9
    },
    "description": null,
    "name": {
      "kind": "Name",
      "loc": {
        "start": 5,
        "end": 9
      },
      "value": "User"
    },
    "interfaces": null,
    "directives": null,
    "fields": null
  }
]
