graphql_rs_native/src/language/snapshots/tests__language::parser::tests::test_object_definition_3.snap
---
created: "2019-10-27T17:29:39.299144Z"
creator: insta@0.8.2
source: graphql_rs_native/src/language/parser.rs
expression: "object_definition::<(&str,\n                     ErrorKind)>(&source)(&source.body).unwrap_or_else(|_|\n                                                                           panic!(\"Test failed\"))"
---
[
  "",
  {
    "kind": "ObjectTypeDefinition",
    "loc": {
      "start": 0,
      "end": 35
    },
    "description": {
      "kind": "StringValue",
      "loc": {
        "start": 0,
        "end": 13
      },
      "value": "Comment",
      "block": true
    },
    "name": {
      "kind": "Name",
      "loc": {
        "start": 31,
        "end": 35
      },
      "value": "User"
    },
    "interfaces": null,
    "directives": null,
    "fields": null
  }
]
