graphql_rs_native/src/language/snapshots/tests__language::parser::tests::test_schema_definition.snap
---
created: "2019-10-30T03:14:35.013799Z"
creator: insta@0.8.2
source: graphql_rs_native/src/language/parser.rs
expression: "schema_definition::<(&str,\n                     ErrorKind)>(&source)(&source.body).unwrap_or_else(|_|\n                                                                           panic!(\"Test failed\"))"
---
[
  "",
  {
    "kind": "SchemaDefinition",
    "loc": {
      "start": 0,
      "end": 14
    },
    "directives": [
      {
        "kind": "Directive",
        "loc": {
          "start": 6,
          "end": 11
        },
        "name": {
          "kind": "Name",
          "loc": {
            "start": 8,
            "end": 11
          },
          "value": "abc"
        },
        "arguments": null
      }
    ],
    "operationTypes": []
  }
]
