graphql_rs_native/src/language/snapshots/tests__language::parser::tests::test_string_value_4.snap
---
created: "2019-10-30T03:14:35.026523Z"
creator: insta@0.8.2
source: graphql_rs_native/src/language/parser.rs
expression: "string_value::<(&str,\n                ErrorKind)>(&source)(&source.body).unwrap_or_else(|_|\n                                                                      panic!(\"Test failed\"))"
---
[
  " ",
  {
    "kind": "StringValue",
    "loc": {
      "start": 0,
      "end": 18
    },
    "value": "My test text",
    "block": true
  }
]
