graphql_rs_native/src/language/snapshots/tests__language::parser::tests::test_string_value_5.snap
---
created: "2019-08-12T01:59:16.885362Z"
creator: insta@0.8.2
source: graphql_rs_native/src/language/parser.rs
expression: "string_value::<(&str,\n                ErrorKind)>(&source)(&source.body).unwrap_or_else(|_|\n                                                                      panic!(\"Test failed\"))"
---
[
  " ",
  {
    "kind": "StringValue",
    "loc": {
      "start": 0,
      "end": 22,
      "source": {
        "name": "GraphQL Request",
        "locationOffset": {
          "line": 1,
          "column": 1
        }
      }
    },
    "value": " He said: \"Hello\" ",
    "block": false
  }
]
