graphql_rs_native/src/language/snapshots/tests__language::parser::tests::test_string_value_6.snap
---
created: "2019-10-27T17:29:39.400759Z"
creator: insta@0.8.2
source: graphql_rs_native/src/language/parser.rs
expression: "string_value::<(&str,\n                ErrorKind)>(&source)(&source.body).unwrap_or_else(|_|\n                                                                      panic!(\"Test failed\"))"
---
[
  " ",
  {
    "kind": "StringValue",
    "loc": {
      "start": 0,
      "end": 24
    },
    "value": " He said: \"Hello\" ",
    "block": true
  }
]
