graphql_rs_native/src/language/snapshots/tests__language::parser::tests::test_type_definition_1.snap
---
created: "2019-10-30T03:14:35.129902Z"
creator: insta@0.8.2
source: graphql_rs_native/src/language/parser.rs
expression: "type_definition::<(&str,\n                   ErrorKind)>(&source)(&source.body).unwrap_or_else(|_|\n                                                                         panic!(\"Test failed\"))"
---
[
  "",
  {
    "kind": "InputObjectTypeDefinition",
    "kind": "InputObjectTypeDefinition",
    "loc": {
      "start": 0,
      "end": 10
    },
    "description": null,
    "name": {
      "kind": "Name",
      "loc": {
        "start": 6,
        "end": 10
      },
      "value": "User"
    },
    "directives": null,
    "fields": null
  }
]
